[project]
name = "task-queue"
version = "0.1.0"
description = "A lightweight async task queue with pluggable scheduling"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "aiofiles>=23.1",
    "structlog>=23.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"